[gd_scene load_steps=2 format=3 uid="uid://dnomt1lpun2c6"]

[ext_resource type="Script" uid="uid://d1eoxgs1je0co" path="res://settings_menu.gd" id="1_ufg0w"]

[node name="drone settings" type="Control" groups=["esc_menu", "menu"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ufg0w")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(800, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "
Setting
"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer/PanelContainer"]
layout_mode = 2

[node name="tune" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Tune"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="pitch" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Pitch"

[node name="pitchslider" type="HSlider" parent="PanelContainer/VBoxContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="pitchvalue" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(28, 0)
layout_mode = 2
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="roll" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Roll"

[node name="rollslider" type="HSlider" parent="PanelContainer/VBoxContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="rollvalue" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(28, 0)
layout_mode = 2
text = "0"

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="yaw" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Yaw"

[node name="yawslider" type="HSlider" parent="PanelContainer/VBoxContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="yawvalue" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(28, 0)
layout_mode = 2
text = "0"

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer/PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="pitch" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Pitch"

[node name="pitchslider" type="HSlider" parent="PanelContainer/VBoxContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="pitchvalue" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(28, 0)
layout_mode = 2
text = "0"

[connection signal="value_changed" from="PanelContainer/VBoxContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/pitchslider" to="." method="pitch_valuechanged"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2/rollslider" to="." method="_on_rollslider_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer3/yawslider" to="." method="_on_yawslider_value_changed"]
